web/book/tests/examples/snapshots/examples__book__language-features__regex__regex-expressions__0.snap
---
source: web/book/tests/examples/book.rs
expression: "from tracks\nfilter (name ~= \"Love\")\n"
---
SELECT
  *
FROM
  tracks
WHERE
  REGEXP(name, 'Love')

