web/book/tests/examples/snapshots/examples__book__language-features__regex__regex-expressions__1.snap
---
source: web/book/tests/examples/book.rs
expression: "prql target:sql.duckdb\n\nfrom artists\nfilter (name ~= \"Love.*You\")\n"
---
SELECT
  *
FROM
  artists
WHERE
  REGEXP_MATCHES(name, 'Love.*You')

