web/book/tests/examples/snapshots/examples__book__language-features__regex__regex-expressions__2.snap
---
source: web/book/tests/examples/book.rs
expression: "prql target:sql.bigquery\n\nfrom tracks\nfilter (name ~= \"\\\\bLove\\\\b\")\n"
---
SELECT
  *
FROM
  tracks
WHERE
  REGEXP_CONTAINS(name, '\bLove\b')

