web/book/tests/examples/snapshots/examples__book__language-features__regex__regex-expressions__3.snap
---
source: web/book/tests/examples/book.rs
expression: "prql target:sql.postgres\n\nfrom tracks\nfilter (name ~= \"\\\\(I Can't Help\\\\) Falling\")\n"
---
SELECT
  *
FROM
  tracks
WHERE
  name ~ '\(I Can''t Help\) Falling'

