web/book/tests/examples/snapshots/examples__book__language-features__regex__regex-expressions__4.snap
---
source: web/book/tests/examples/book.rs
expression: "prql target:sql.mysql\n\nfrom tracks\nfilter (name ~= \"With You\")\n"
---
SELECT
  *
FROM
  tracks
WHERE
  name REGEXP 'With You'

